log
Wed, Apr 30, 2025  2:45:33 PM: 
 tests:  1|8
total_score: 0/70
5729e4d
Sat, May  3, 2025  9:50:35 PM: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
ee4f3bf
Sun, May  4, 2025  3:54:30 PM: 
 treemap.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
 tests:  5|7
total_score: 5/70
5210ba4
Sun, May  4, 2025  3:58:42 PM: 
 treemap.c | 54 +++++++++++++-----------------------------------------
 1 file changed, 13 insertions(+), 41 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
3155872
Sun, May  4, 2025  3:59:07 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
C:\Users\pa447\AppData\Local\Temp\ccNOe2jr.o: In function `insert_test1':
C:\Users\pa447\OneDrive\Escritorio\Uni\Progra\Labs\lab4\lab-4-rboles-binarios-de-b-squeda-Matunga-C/test.c:175: undefined reference to `insertTreeMap'
C:\Users\pa447\AppData\Local\Temp\ccNOe2jr.o: In function `insert_test2':
C:\Users\pa447\OneDrive\Escritorio\Uni\Progra\Labs\lab4\lab-4-rboles-binarios-de-b-squeda-Matunga-C/test.c:192: undefined reference to `insertTreeMap'
collect2.exe: error: ld returned 1 exit status
e74e2d7
Sun, May  4, 2025  3:59:23 PM: 
Compilation failed
C:\Users\pa447\AppData\Local\Temp\ccrt76Lp.o: In function `insert_test1':
C:\Users\pa447\OneDrive\Escritorio\Uni\Progra\Labs\lab4\lab-4-rboles-binarios-de-b-squeda-Matunga-C/test.c:175: undefined reference to `insertTreeMap'
C:\Users\pa447\AppData\Local\Temp\ccrt76Lp.o: In function `insert_test2':
C:\Users\pa447\OneDrive\Escritorio\Uni\Progra\Labs\lab4\lab-4-rboles-binarios-de-b-squeda-Matunga-C/test.c:192: undefined reference to `insertTreeMap'
collect2.exe: error: ld returned 1 exit status
cdae03c
Sun, May  4, 2025  4:00:50 PM: 
 treemap.c | 24 +++++++++++++++++-------
 1 file changed, 17 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:50:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
treemap.c:49:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
cae08c7
